--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Hirolsy)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
-add_executable(Hirolsy main.cpp)
+add_executable(Hirolsy main.cpp Game.cpp Game.h GUI/StateMachine.cpp GUI/StateMachine.h GUI/GameStates/State.h GUI/GUIObject.cpp GUI/GUIObject.h GUI/GameStates/MainMenu.cpp GUI/GameStates/MainMenu.h GameLogic/Map.cpp GameLogic/Map.h)
 target_link_libraries(Hirolsy sfml-graphics sfml-audio)
 target_link_libraries(Hirolsy "stdc++fs")
 
